# portfolio-project3c

./: .dockerignore  .env.template  .gitignore  README.md  dbt_project.yml  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: jira_sync_log.md
etl_pipeline/sql/staging/: create_stg_pmo.sql
etl_pipeline/utils/: exceptions.py  launch_psql.py  load_profiles.py  log_config.py  secrets_manager.py  validation.py
tests/: test_launch_psql.py  test_secrets_manager.py  test_validate_pmo.py
