[project]
name = "portfolio-project3c"
version = "0.1.0"
description = "Data Warehousing Pipeline with dbt, Airflow, and PostgreSQL"
authors = [
    { name="Katherina Dawkins", email="km.dawkins@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.11"


[tool.black]
line-length = 88
target-version = ['py311']